# mulch

./: .gitignore  CHANGELOG.md  README.md  ROADMAP.md  mulch-scaffold.json  pyproject.toml  requirements.txt
.github/workflows/: release.yml  test-build.yml
.github/workflows_/: ci.yml
.mulch_/: mulch-config-placeholder-bs.toml  mulch-scaffold.json
.mulch_/logs/: logging.json
aug10x/: about_this_workspace.md
config/: scaffold3.json
docs/: CHANGELOG.md  ROADMAP.md  TODO.md  chat_mulchvision_250709_023801.md  how_to_install_rick_click_menu_items.md  index.md  mulch-layout.md
docs/design/: design-motifs.md
docs/features/: context-spec.md  order-spec.md  seed-spec.md  show-spec.md  src-spec.md  validate-spec.md
logs/: logging.json
research/chatlogs/: mulch 0.1.36 notes.md
scripts/: mulch-init-here.ps1  pipx-testpypi.ps1  test-mulch-scripting.py  test.py
scripts/install/: setup.ps1
scripts/righ-click-menu-registry(edit-user)/: mulch-folder.reg  mulch-init-bare.ps1  mulch-init-here.ps1  mulch-init-here.reg  mulch-init-x3.reg  mulch-init.ps1  pipx install mulch.ps1
scripts/shift-right-click-mulch/: mulch-file.ps1  mulch-file.reg  mulch-folder.ps1  mulch-init-here.ps1  mulch-stealth.ps1  mulch-workspace.ps1  mulch-workspace.reg  pipx venvs - Shortcut.lnk
src/mulch/: basepath_manager.py  cli.py  cli_.py  constants.py  decorators.py  helpers.py  logging_setup.py  reference_lock_manager.py  sandbox.py  workspace_factory.py  (+2 more)
templates/: workspace_manager.py.j2
test13/: about_this_workspace.md  default-workspace.toml
workspaces/: default-workspace.toml
(+7 files in other folders)
