[tool.poetry]
name = "mulch"
version = "0.2.16"
description = "CLI for initializing standard and templated workspaces, controlled by `.mulch/mulch.toml`."
authors = ["George Clayton Bennett <george.bennett@memphistn.gov>"]
packages = [{ include = "mulch", from = "src" }]
include = [
    "src/mulch/VERSION",
	"src/mulch/mulch.toml",
	"src/mulch/logging.json",
	"src/mulch/default-workspace.toml",
	"src/mulch/templates/*.j2"
	] 
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11"
toml = "^0.10.2"
typer = "^0.12.3"
click = "<8.1.7"
rich = "<13.7.0"
jinja2 = "^3.1.6"

[tool.poetry.scripts]
mulch = "mulch.cli:app"
mulch-setup = "src.scripts.install.install:run_install"

[tool.poetry.group.dev.dependencies]
twine = "^6.1.0"

# Not working for me, reverts to manual
#[tool.poetry-dynamic-versioning]
#enable = true
#vcs = "git"
#style = "pep440"   # Default
#format = "{tag}"  # <-- This avoids adding the +local part


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
